--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reviews & Feedback</title>
-    <link rel="stylesheet" href="CSS/styles-reviews.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
