--- a/index.html
+++ b/index.html
@@ -28,12 +28,15 @@
     <main>
         <h3>Reviews</h3>
         <div id="reviews">
-            <h4>Alex</h4>
-            <p>
-                My friends and I went on a trip to Hyderabad. There are so many historical places in Hyderabad to visit. One of the best masjid named Mecca Masjid is located in Hyderabad. 
-                This is the largest mosque in India, having a capacity of 20000 people at the same time. And in front of Mecca Masjid, there are so many shops of things Islamic people use in their day-to-day lives. 
-                And also have other some spots like Golconda fort, Charminar. You have to go there once.
-            </p> <hr>
+            <table>
+                <tr><h4>Alex</h4></tr>
+                <tr><p>
+                    My friends and I went on a trip to Hyderabad. There are so many historical places in Hyderabad to visit. One of the best masjid named Mecca Masjid is located in Hyderabad. 
+                    This is the largest mosque in India, having a capacity of 20000 people at the same time. And in front of Mecca Masjid, there are so many shops of things Islamic people use in their day-to-day lives. 
+                    And also have other some spots like Golconda fort, Charminar. You have to go there once.
+                </p></tr>
+            </table>
+            <hr>
             <h4>Imran</h4>
             <p>
                 Hyderabad is a place where we can visit so many tourist and famous places. One of my favorite places is Charminar in Hyderabad. Charminar is very famous in India. When I visited Charminar, it feels fascinating. I bought a ticket to climb Charminar. It's a bit hot due to summer.
