--- a/index.html
+++ b/index.html
@@ -28,14 +28,12 @@
     <main>
         <h3>Reviews</h3>
         <div id="reviews">
-            <table>
-                <tr><h4>Alex</h4></tr>
-                <tr><p>
+            <h4>Alex</h4>
+                <p>
                     My friends and I went on a trip to Hyderabad. There are so many historical places in Hyderabad to visit. One of the best masjid named Mecca Masjid is located in Hyderabad. 
                     This is the largest mosque in India, having a capacity of 20000 people at the same time. And in front of Mecca Masjid, there are so many shops of things Islamic people use in their day-to-day lives. 
                     And also have other some spots like Golconda fort, Charminar. You have to go there once.
-                </p></tr>
-            </table>
+                </p>
             <hr>
             <h4>Imran</h4>
             <p>
