Updated header and footer

--- a/reviews.html
+++ b/reviews.html
@@ -10,6 +10,21 @@
   <link rel="stylesheet" href="Reviewstyles.css">
 </head>
 <body>
+    <header>
+        <div class="container"> 
+            <div id="logo">
+                <h1 class="">Welcome to Hyderabad</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Booking</a></li>
+                    <li><a href="#">Tourist Places</a></li>
+                    <li><a href="#">Amusement Parks</a></li>
+                    <li><a href="reviews-feedback.html">Reviews&feedback</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
 <div class="rev-section">
 
@@ -20,7 +35,7 @@
 
 <div class="review">
    <div class="head-review">
-      <img src="/alison-wang-mou0S7ViElQ-unsplash.jpg" width="250px">
+      <img src="alison-wang-mou0S7ViElQ-unsplash.jpg" width="250px">
    </div>
    <div class="body-review">
       <div class="name-review">Minion</div>
@@ -94,6 +109,10 @@
 </div>
 
 </div>
+<footer>
+    <p>Hyderabad Travel Guide, Copyright &copy; 2020</p>
+    <p>please visit again</p>
+</footer>
 
 </body>
 </html>
