--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Booking</a></li>
-                    <li><a href="#">Tourist Places</a></li>
-                    <li><a href="#">Amusement Parks</a></li>
+                    <li><a href="Booking.html">Booking</a></li>
+                    <li><a href="touristplaces.html">Tourist Places</a></li>
+                    <li><a href="amusementparks.html">Amusement Parks</a></li>
                     <li><a href="reviews-feedback.html">Reviews&feedback</a></li>
                 </ul>
             </nav>
