--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reviews & Feedback</title>
+    <title>Reviews and Feedback</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -25,8 +25,8 @@
     <h2 class="center">
         Tourists from all over the world love to visit us!
     </h2>
-    <div class="rev-section">
-        <p class="note">Hyderabad attracts tourists from all over the world and here are few of the reviews shared by our visitors.</p>
+    <div class="review-section">
+        <p class="notes">Hyderabad attracts tourists from all over the world and here are few of the reviews shared by our visitors.</p>
         
         <div class="reviews">
         
@@ -34,7 +34,7 @@
            <div class="head-review">
               <img src="alison-wang-mou0S7ViElQ-unsplash.jpg" width="250px">
            </div>
-           <div class="body-review">
+           <div class="review-body">
               <div class="name-review">Minion</div>
               <div class="place-review">United States</div>
               <div class="desc-review">My friends and I went on a trip to Hyderabad. There are so many historical places in Hyderabad to visit. One of the best Masjid named Mecca Masjid is located in Hyderabad. And in front of Mecca Masjid, there are so many shops of things Islamic people use in their day-to-day lives. 
@@ -45,7 +45,7 @@
            <div class="head-review">
               <img src="doug-maloney-B63UmuDkznY-unsplash.jpg" width="250px">
            </div>
-           <div class="body-review">
+           <div class="review-body">
               <div class="name-review">Dexter</div>
               <div class="place-review">Moscow</div>
               <div class="desc-review">Hyderabad is a place where we can visit so many tourist and famous places. One of my favorite places is Charminar in Hyderabad. Charminar is very famous in India. When I visited Charminar, it feels fascinating. I bought a ticket to climb Charminar. It's a bit hot due to summer.
@@ -56,7 +56,7 @@
            <div class="head-review">
               <img src="erik-mclean-yan_kDfdttA-unsplash.jpg" width="250px">
            </div>
-           <div class="body-review">
+           <div class="review-body">
               <div class="name-review">The Iron Giant</div>
               <div class="place-review">Rockwell</div>
               <div class="desc-review">I visited here many times because I love this place very much. Hyderabad is the capital of Telangana state. We can reach here very easily through Rajive Gandhi international airport, Train and Bus. 
@@ -67,7 +67,7 @@
             <div class="head-review">
                <img src="hello-i-m-nik-Oklzj82ffsQ-unsplash.jpg" width="250px">
             </div>
-            <div class="body-review">
+            <div class="review-body">
                <div class="name-review">Peter Parker</div>
                <div class="place-review">New York</div>
                <div class="desc-review">Hello everyone, today I want to share my tour with you that I had in last week to Hyderabad. I had a great experience. This is a small city situated in Telangana Andhra Pradesh. There are many fabulous things to do in Hyderabad. One of the best things I experienced was the Snow World in Hyderabad. The Snow world's entry fee is 500 rupees, but it is worth it as it is giving us an awesome experience. The next famous all-time favorite thing of Hyderabad is the Hyderabadi biryani. The one and only one of the famous Paradise hotel for biryani. 
