--- a/About_us.html
+++ b/About_us.html
@@ -17,11 +17,14 @@
                     <li><a href="Booking.html">Booking</a></li>
                     <li><a href="touristplaces.html">Tourist Places</a></li>
                     <li><a href="amusementparks.html">Amusement Parks</a></li>
-                    <li><a href="reviews-feedback.html">Reviews&feedback</a></li>
+                    <li><a href="About_us.html">About Us</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+    <div id="About">
+        
+    </div>
     <h2 class="center">
         Tourists from all over the world love to visit us!
     </h2>
