--- a/test1.html
+++ b/test1.html
@@ -12,50 +12,52 @@
     <div id="container">
 
         <h2>We Love What we do</h2>
-        <p>
+        <p class="intro">
             As a travel website we make sure our customers are provided with ample resources and information
             make their trip to "The Bhagyanagaram" a memorable one.
         </p>
-        <div class="aside">
-            <div id="mission">
-                <h3>
-                    Our Mission
-                </h3>
-                <p>
-                    It is a long established fact that a reader will be distracted by the readable content of a page
-                    when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                    distribution of letters,
-                    as opposed to using 'Content here, content here', making it look like readable English.
-                </p>
+        <div class="grid-container">
+            <div class="grid-item item1">
+            <div class="about">
+                      <h3>
+                          About Us
+                      </h3>
+                      <p>
+                          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                          scrambled it to make a type specimen book.
+                          It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                          essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
+                          Lorem Ipsum passages,
+                          and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+                          Ipsum.
+                      </p>
+                  </div>  
             </div>
-            <div id="Why">
-                <h3>
-                    Why Us?
-                </h3>
-                <p>
-                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                    alteration in some form, by injected humour, or randomised words which don't look even slightly
-                    believable.
-                    If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
-                    embarrassing hidden in the middle of text.
-                </p>
-            </div>
-        </div>
-        <div id="about" class="about">
-            <h3>
-                About Us
-            </h3>
-            <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book.
-                It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-                essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-                Lorem Ipsum passages,
-                and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
-                Ipsum.
-            </p>
-        </div>
+            <div class="grid-item item2"><div id="mission">
+                          <h3>
+                              Our Mission
+                          </h3>
+                          <p>
+                              It is a long established fact that a reader will be distracted by the readable content of a page
+                              when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+                              distribution of letters,
+                              as opposed to using 'Content here, content here', making it look like readable English.
+                          </p>
+                      </div></div>
+            <div class="grid-item item3"><div id="Why">
+                          <h3>
+                              Why Us?
+                          </h3>
+                          <p>
+                              There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                              alteration in some form, by injected humour, or randomised words which don't look even slightly
+                              believable.
+                              If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
+                              embarrassing hidden in the middle of text.
+                          </p>
+                      </div></div>  
+          </div>
 
         <h2 class="center">
             Tourists from all over the world love to visit us!
@@ -63,68 +65,69 @@
         <div class="review-section">
             <p class="notes">Hyderabad attracts tourists from all over the world and here are few of the reviews shared
                 by our visitors.</p>
+                <div class="review-container">
+                    <div><div class="review review-left">
+                                          <div class="review review-left">
+                                      <div class="head-review">
+                                          <img src="alison-wang-mou0S7ViElQ-unsplash.jpg">
+                                      </div>
+                                      <div class="review-body">
+                                          <div class="name-review">Minion</div>
+                                          <div class="place-review">United States</div>
+                                          <div class="desc-review">My friends and I went on a trip to Hyderabad. There are so many
+                                              historical places in Hyderabad to visit. One of the best Masjid named Mecca Masjid is
+                                              located in Hyderabad. And in front of Mecca Masjid, there are so many shops of things
+                                              Islamic people use in their day-to-day lives.
+                                              And also have other some spots like Golconda fort, Charminar. You have to go there once.
+                                          </div>
+                                      </div>
+                                  </div>
+                                      </div></div>
+                    <div><div class="review review-right">
+                                      <div class="head-review">
+                                          <img src="doug-maloney-B63UmuDkznY-unsplash.jpg">
+                                      </div>
+                                      <div class="review-body">
+                                          <div class="name-review">Dexter</div>
+                                          <div class="place-review">Moscow</div>
+                                          <div class="desc-review">My friends and I went on a trip to Hyderabad. There are so many
+                                              historical places in Hyderabad to visit. One of the best Masjid named Mecca Masjid is
+                                              located in Hyderabad. And in front of Mecca Masjid, there are so many shops of things
+                                              Islamic people use in their day-to-day lives. And also have other some spots like Golconda
+                                              fort, Charminar. You have to go there once.</div>
+                                      </div>
+                                  </div></div>
+                    <div><div class="review review-left">
+                                      <div class="head-review">
+                                          <img src="erik-mclean-yan_kDfdttA-unsplash.jpg">
+                                      </div>
+                                      <div class="review-body">
+                                          <div class="name-review">The Iron Giant</div>
+                                          <div class="place-review">Rockwell</div>
+                                          <div class="desc-review">My friends and I went on a trip to Hyderabad. There are so many
+                                              historical places in Hyderabad to visit. One of the best Masjid named Mecca Masjid is
+                                              located in Hyderabad. And in front of Mecca Masjid, there are so many shops of things
+                                              Islamic people use in their day-to-day lives. And also have other some spots like Golconda
+                                              fort, Charminar. You have to go there once.</div>
+                                      </div>
+                                  </div></div>  
+                    <div><div class="review review-right">
+                                      <div class="head-review">
+                                          <img src="hello-i-m-nik-Oklzj82ffsQ-unsplash.jpg" width="250px">
+                                      </div>
+                                      <div class="review-body">
+                                          <div class="name-review">Peter Parker</div>
+                                          <div class="place-review">New York</div>
+                                          <div class="desc-review">My friends and I went on a trip to Hyderabad. There are so many
+                                              historical places in Hyderabad to visit. One of the best Masjid named Mecca Masjid is
+                                              located in Hyderabad. And in front of Mecca Masjid, there are so many shops of things
+                                              Islamic people use in their day-to-day lives. And also have other some spots like Golconda
+                                              fort, Charminar. You have to go there once.</div>
+                                      </div>
+                                  </div></div>
+                  </div>
 
-            <div class="reviews">
-
-                <div class="review review-left">
-                    <div class="head-review">
-                        <img src="alison-wang-mou0S7ViElQ-unsplash.jpg">
-                    </div>
-                    <div class="review-body">
-                        <div class="name-review">Minion</div>
-                        <div class="place-review">United States</div>
-                        <div class="desc-review">My friends and I went on a trip to Hyderabad. There are so many
-                            historical places in Hyderabad to visit. One of the best Masjid named Mecca Masjid is
-                            located in Hyderabad. And in front of Mecca Masjid, there are so many shops of things
-                            Islamic people use in their day-to-day lives.
-                            And also have other some spots like Golconda fort, Charminar. You have to go there once.
-                        </div>
-                    </div>
-                </div>
-                <div class="review review-right">
-                    <div class="head-review">
-                        <img src="doug-maloney-B63UmuDkznY-unsplash.jpg">
-                    </div>
-                    <div class="review-body">
-                        <div class="name-review">Dexter</div>
-                        <div class="place-review">Moscow</div>
-                        <div class="desc-review">My friends and I went on a trip to Hyderabad. There are so many
-                            historical places in Hyderabad to visit. One of the best Masjid named Mecca Masjid is
-                            located in Hyderabad. And in front of Mecca Masjid, there are so many shops of things
-                            Islamic people use in their day-to-day lives. And also have other some spots like Golconda
-                            fort, Charminar. You have to go there once.</div>
-                    </div>
-                </div>
-                <div class="review review-left">
-                    <div class="head-review">
-                        <img src="erik-mclean-yan_kDfdttA-unsplash.jpg">
-                    </div>
-                    <div class="review-body">
-                        <div class="name-review">The Iron Giant</div>
-                        <div class="place-review">Rockwell</div>
-                        <div class="desc-review">My friends and I went on a trip to Hyderabad. There are so many
-                            historical places in Hyderabad to visit. One of the best Masjid named Mecca Masjid is
-                            located in Hyderabad. And in front of Mecca Masjid, there are so many shops of things
-                            Islamic people use in their day-to-day lives. And also have other some spots like Golconda
-                            fort, Charminar. You have to go there once.</div>
-                    </div>
-                </div>
-                <div class="review review-right">
-                    <div class="head-review">
-                        <img src="hello-i-m-nik-Oklzj82ffsQ-unsplash.jpg" width="250px">
-                    </div>
-                    <div class="review-body">
-                        <div class="name-review">Peter Parker</div>
-                        <div class="place-review">New York</div>
-                        <div class="desc-review">My friends and I went on a trip to Hyderabad. There are so many
-                            historical places in Hyderabad to visit. One of the best Masjid named Mecca Masjid is
-                            located in Hyderabad. And in front of Mecca Masjid, there are so many shops of things
-                            Islamic people use in their day-to-day lives. And also have other some spots like Golconda
-                            fort, Charminar. You have to go there once.</div>
-                    </div>
-                </div>
-
-            </div>
+            
         </div>
         <div>
             <h2>Responsive Form</h2>
