--- a/reviews.html
+++ b/reviews.html
@@ -130,8 +130,7 @@
             
         </div>
         <div>
-            <h2>Responsive Form</h2>
-            <p>Resize the browser window to see the effect. When the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other.</p>
+            <h2>Feedback Form</h2>
             <div class="feedback">
                 <form action="">
                     <div class="row">
