--- a/reviews.html
+++ b/reviews.html
@@ -212,7 +212,7 @@
                 </div>
                 <input type="submit" value="Submit">
             </form>
-        </div> --> -->
+        </div> -->
 
     </div>
 
