updated reviews page and stylesheet accordingly

--- a/reviews.html
+++ b/reviews.html
@@ -19,77 +19,64 @@
         <div class="grid-container">
             <div class="grid-item item1">
             <div class="about">
-                      <h3>
+                      <h3 class="item-titles">
                           About Us
                       </h3>
                       <p>
-                          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                          scrambled it to make a type specimen book.
-                          It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-                          essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-                          Lorem Ipsum passages,
-                          and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
-                          Ipsum.
+                        With its aura of history and heritage and replete with legends and tales, Hyderabad city clearly continues to be a major attraction for international tourists attracting almost 80 percent of the State's footfall. That being the case, we started this page to guide our tourists to become an elemental part of their unforgettable vacation in this city.
+                      </p>
+                      <p>
+                        Travelers worldwide use our site to browse accommodations, restaurants, attractions as we've all the information gathered at one place for our tourist's convenience. Whether planning or on a trip, travelers visit our site to compare economical prices on hotels, book popular tours and attractions, and review fellow tourists' feedback to make plans. We are ranked as the second-best travel site by one of the popular travel magazines of South India.
                       </p>
                   </div>  
             </div>
             <div class="grid-item item2"><div id="mission">
-                          <h3>
+                          <h3 class="item-titles">
                               Our Mission
                           </h3>
                           <p>
-                              It is a long established fact that a reader will be distracted by the readable content of a page
-                              when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                              distribution of letters,
-                              as opposed to using 'Content here, content here', making it look like readable English.
+                            As Agustine of Hippo said, the world is a book and those who do not travel read only one page. At Hyderabad Travel Website, we want to ensure that those who want to explore more of our city with rich cultural heritage have a lifetime experience and are dedicated to working around the clock to achieve it.
                           </p>
                       </div></div>
             <div class="grid-item item3"><div id="Why">
-                          <h3>
+                          <h3 class="item-titles">
                               Why Us?
                           </h3>
                           <p>
-                              There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                              alteration in some form, by injected humour, or randomised words which don't look even slightly
-                              believable.
-                              If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
-                              embarrassing hidden in the middle of text.
+                            We at Hyderabad Travel Website works around the clock to make sure that all the information related to tourism and attractions over the city are up to date, and that is one of the reasons our visitors keep on visiting us and rely on us every time they are planning to visit the city of pearls. 
                           </p>
                       </div></div>  
           </div>
 
-        <h2 class="center">
+        <h2>
             Tourists from all over the world love to visit us!
         </h2>
         <div class="review-section">
             <p class="notes">Hyderabad attracts tourists from all over the world and here are few of the reviews shared
                 by our visitors.</p>
                 <div class="review-container">
-                    <div><div class="review review-left">
+                    <div><div class="review1 review-left">
                                           <div class="review review-left">
                                       <div class="head-review">
-                                          <img src="alison-wang-mou0S7ViElQ-unsplash.jpg">
+                                          <img src="Rajini.jpeg">
                                       </div>
                                       <div class="review-body">
-                                          <div class="name-review">Minion</div>
-                                          <div class="place-review">United States</div>
-                                          <div class="desc-review">My friends and I went on a trip to Hyderabad. There are so many
-                                              historical places in Hyderabad to visit. One of the best Masjid named Mecca Masjid is
-                                              located in Hyderabad. And in front of Mecca Masjid, there are so many shops of things
-                                              Islamic people use in their day-to-day lives.
-                                              And also have other some spots like Golconda fort, Charminar. You have to go there once.
+                                          <div class="name-review">Rajinikanth</div>
+                                          <div class="place-review">Tamil Nadu, India</div>
+                                          <div class="desc-review">
+                                            Hyderabad is a delightful blend of traditional pearl shops, authentic flavors Irani cafes, the lavishness of Taj Falaknuma Palace, 
+                                            the liveliness of decades-old Laad Bazaar, the aromas of Hyderabadi cuisine, and much more. Experience its enchanting historical touch, which has been weaved artistically in the thread of its modern living.
                                           </div>
                                       </div>
                                   </div>
                                       </div></div>
-                    <div><div class="review review-right">
+                    <div><div class="review2 review-right">
                                       <div class="head-review">
-                                          <img src="doug-maloney-B63UmuDkznY-unsplash.jpg">
+                                          <img src="keanu.jpeg">
                                       </div>
                                       <div class="review-body">
-                                          <div class="name-review">Dexter</div>
-                                          <div class="place-review">Moscow</div>
+                                          <div class="name-review">Keanu Reeves</div>
+                                          <div class="place-review">Beirut, Canada</div>
                                           <div class="desc-review">My friends and I went on a trip to Hyderabad. There are so many
                                               historical places in Hyderabad to visit. One of the best Masjid named Mecca Masjid is
                                               located in Hyderabad. And in front of Mecca Masjid, there are so many shops of things
@@ -97,32 +84,27 @@
                                               fort, Charminar. You have to go there once.</div>
                                       </div>
                                   </div></div>
-                    <div><div class="review review-left">
+                    <div><div class="review3 review-left">
                                       <div class="head-review">
-                                          <img src="erik-mclean-yan_kDfdttA-unsplash.jpg">
+                                          <img src="David.jpeg">
                                       </div>
                                       <div class="review-body">
-                                          <div class="name-review">The Iron Giant</div>
-                                          <div class="place-review">Rockwell</div>
-                                          <div class="desc-review">My friends and I went on a trip to Hyderabad. There are so many
-                                              historical places in Hyderabad to visit. One of the best Masjid named Mecca Masjid is
-                                              located in Hyderabad. And in front of Mecca Masjid, there are so many shops of things
-                                              Islamic people use in their day-to-day lives. And also have other some spots like Golconda
-                                              fort, Charminar. You have to go there once.</div>
+                                          <div class="name-review">David Warner</div>
+                                          <div class="place-review">Australia</div>
+                                          <div class="desc-review">My teammates and I during the tour to India for the World cup has took a break and visited various places in Hyderabad when we had a break of 5 days. 
+                                            We were overwhelmed with the care and love Hyderabadis show towards us. The architecture and the cultural history has amazed us and we are really glad we took break and visited all the places with their own significance like the Charminar, Golconda Fort, Qutb Shahi tombs etc.</div>
                                       </div>
                                   </div></div>  
-                    <div><div class="review review-right">
+                    <div><div class="review4 review-right">
                                       <div class="head-review">
-                                          <img src="hello-i-m-nik-Oklzj82ffsQ-unsplash.jpg" width="250px">
+                                          <img src="Jim.jpeg" width="250px">
                                       </div>
                                       <div class="review-body">
-                                          <div class="name-review">Peter Parker</div>
-                                          <div class="place-review">New York</div>
-                                          <div class="desc-review">My friends and I went on a trip to Hyderabad. There are so many
-                                              historical places in Hyderabad to visit. One of the best Masjid named Mecca Masjid is
-                                              located in Hyderabad. And in front of Mecca Masjid, there are so many shops of things
-                                              Islamic people use in their day-to-day lives. And also have other some spots like Golconda
-                                              fort, Charminar. You have to go there once.</div>
+                                          <div class="name-review">Jim Carrey</div>
+                                          <div class="place-review">Toronto, Canada</div>
+                                          <div class="desc-review">
+                                            I have visited this place once, and I never forget its elegance and infrastructure. Charminar and the Golconda Fort are the ones that I love visiting the most. I've been around Mecca Masjid, and it's a peaceful place. If you're planning to visit this city, please make sure to visit these places to know its historical significance.
+                                          </div>
                                       </div>
                                   </div></div>
                   </div>
@@ -131,11 +113,12 @@
         </div>
         <div>
             <h2>Feedback Form</h2>
+            <p class="notes">If you would like to share your experiences related to your visit, please use the below form to submit it. Thank you!</p>
             <div class="feedback">
                 <form action="">
                     <div class="row">
                         <div class="leftcol">
-                            <label for="fname">First Name</label>
+                            <label for="fname">First Name :</label>
                         </div>
                         <div class="rightcol">
                             <input type="text" id="fname" name="firstname" placeholder="Your name..">
@@ -143,7 +126,7 @@
                     </div>
                     <div class="row">
                         <div class="leftcol">
-                            <label for="lname">Last Name</label>
+                            <label for="lname">Last Name :</label>
                         </div>
                         <div class="rightcol">
                             <input type="text" id="lname" name="lastname" placeholder="Your last name..">
@@ -151,7 +134,7 @@
                     </div>
                     <div class="row">
                         <div class="leftcol">
-                            <label for="country">Country</label>
+                            <label for="country">Country :</label>
                         </div>
                         <div class="rightcol">
                             <select id="country" name="country">
@@ -163,7 +146,7 @@
                     </div>
                     <div class="row">
                         <div class="leftcol">
-                            <label for="subject">Feedback</label>
+                            <label for="subject">Feedback :</label>
                         </div>
                         <div class="rightcol">
                             <textarea id="subject" name="subject" placeholder="Write your feedback.." style="height:200px"></textarea>
