--- a/reviews.html
+++ b/reviews.html
@@ -48,17 +48,17 @@
                       </div></div>  
           </div>
 
-        <h2>
+        <h2 class="center">
             Tourists from all over the world love to visit us!
         </h2>
         <div class="review-section">
             <p class="notes">Hyderabad attracts tourists from all over the world and here are few of the reviews shared
                 by our visitors.</p>
                 <div class="review-container">
-                    <div><div class="review1 review-left">
+                    <div><div class="review review-left">
                                           <div class="review review-left">
                                       <div class="head-review">
-                                          <img src="Rajini.jpeg">
+                                          <img src="/alison-wang-mou0S7ViElQ-unsplash.jpg">
                                       </div>
                                       <div class="review-body">
                                           <div class="name-review">Rajinikanth</div>
@@ -70,7 +70,7 @@
                                       </div>
                                   </div>
                                       </div></div>
-                    <div><div class="review2 review-right">
+                    <div><div class="review review-right">
                                       <div class="head-review">
                                           <img src="keanu.jpeg">
                                       </div>
@@ -84,7 +84,7 @@
                                               fort, Charminar. You have to go there once.</div>
                                       </div>
                                   </div></div>
-                    <div><div class="review3 review-left">
+                    <div><div class="review review-left">
                                       <div class="head-review">
                                           <img src="David.jpeg">
                                       </div>
@@ -95,7 +95,7 @@
                                             We were overwhelmed with the care and love Hyderabadis show towards us. The architecture and the cultural history has amazed us and we are really glad we took break and visited all the places with their own significance like the Charminar, Golconda Fort, Qutb Shahi tombs etc.</div>
                                       </div>
                                   </div></div>  
-                    <div><div class="review4 review-right">
+                    <div><div class="review review-right">
                                       <div class="head-review">
                                           <img src="Jim.jpeg" width="250px">
                                       </div>
@@ -113,7 +113,6 @@
         </div>
         <div>
             <h2>Feedback Form</h2>
-            <p class="notes">If you would like to share your experiences related to your visit, please use the below form to submit it. Thank you!</p>
             <div class="feedback">
                 <form action="">
                     <div class="row">
