--- a/reviews.html
+++ b/reviews.html
@@ -1,167 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <div id="container">
+    <main id="main" class="clearfix">
+        <section id="contactContainer">
+            <div class="form_container">
+                <h2 id="signup">Contact Form</h2><br>
+                <form style="clear: both;" autocomplete="off">
+                    <div class="field">
+                        <label for="full_name">Your Name</label>
+                        <input type="text" id="full_name" name="full_name" placeholder="Enter full name" required>
+                    </div>
 
-        <h2>We Love What we do</h2>
-        <p class="intro">
-            As a travel website we make sure our customers are provided with ample resources and information
-            make their trip to "The Bhagyanagaram" a memorable one.
-        </p>
-        <div class="grid-container">
-            <div class="grid-item item1">
-            <div class="about">
-                      <h3 class="item-titles">
-                          About Us
-                      </h3>
-                      <p>
-                        With its aura of history and heritage and replete with legends and tales, Hyderabad city clearly continues to be a major attraction for international tourists attracting almost 80 percent of the State's footfall. That being the case, we started this page to guide our tourists to become an elemental part of their unforgettable vacation in this city.
-                      </p>
-                      <p>
-                        Travelers worldwide use our site to browse accommodations, restaurants, attractions as we've all the information gathered at one place for our tourist's convenience. Whether planning or on a trip, travelers visit our site to compare economical prices on hotels, book popular tours and attractions, and review fellow tourists' feedback to make plans. We are ranked as the second-best travel site by one of the popular travel magazines of South India.
-                      </p>
-                  </div>  
-            </div>
-            <div class="grid-item item2"><div id="mission">
-                          <h3 class="item-titles">
-                              Our Mission
-                          </h3>
-                          <p>
-                            As Agustine of Hippo said, the world is a book and those who do not travel read only one page. At Hyderabad Travel Website, we want to ensure that those who want to explore more of our city with rich cultural heritage have a lifetime experience and are dedicated to working around the clock to achieve it.
-                          </p>
-                      </div></div>
-            <div class="grid-item item3"><div id="Why">
-                          <h3 class="item-titles">
-                              Why Us?
-                          </h3>
-                          <p>
-                            We at Hyderabad Travel Website works around the clock to make sure that all the information related to tourism and attractions over the city are up to date, and that is one of the reasons our visitors keep on visiting us and rely on us every time they are planning to visit the city of pearls. 
-                          </p>
-                      </div></div>  
-          </div>
-
-        <h2 class="center">
-            Tourists from all over the world love to visit us!
-        </h2>
-        <div class="review-section">
-            <p class="notes">Hyderabad attracts tourists from all over the world and here are few of the reviews shared
-                by our visitors.</p>
-                <div class="review-container">
-                    <div><div class="review review-left">
-                                          <div class="review review-left">
-                                      <div class="head-review">
-                                          <img src="/alison-wang-mou0S7ViElQ-unsplash.jpg">
-                                      </div>
-                                      <div class="review-body">
-                                          <div class="name-review">Rajinikanth</div>
-                                          <div class="place-review">Tamil Nadu, India</div>
-                                          <div class="desc-review">
-                                            Hyderabad is a delightful blend of traditional pearl shops, authentic flavors Irani cafes, the lavishness of Taj Falaknuma Palace, 
-                                            the liveliness of decades-old Laad Bazaar, the aromas of Hyderabadi cuisine, and much more. Experience its enchanting historical touch, which has been weaved artistically in the thread of its modern living.
-                                          </div>
-                                      </div>
-                                  </div>
-                                      </div></div>
-                    <div><div class="review review-right">
-                                      <div class="head-review">
-                                          <img src="keanu.jpeg">
-                                      </div>
-                                      <div class="review-body">
-                                          <div class="name-review">Keanu Reeves</div>
-                                          <div class="place-review">Beirut, Canada</div>
-                                          <div class="desc-review">My friends and I went on a trip to Hyderabad. There are so many
-                                              historical places in Hyderabad to visit. One of the best Masjid named Mecca Masjid is
-                                              located in Hyderabad. And in front of Mecca Masjid, there are so many shops of things
-                                              Islamic people use in their day-to-day lives. And also have other some spots like Golconda
-                                              fort, Charminar. You have to go there once.</div>
-                                      </div>
-                                  </div></div>
-                    <div><div class="review review-left">
-                                      <div class="head-review">
-                                          <img src="David.jpeg">
-                                      </div>
-                                      <div class="review-body">
-                                          <div class="name-review">David Warner</div>
-                                          <div class="place-review">Australia</div>
-                                          <div class="desc-review">My teammates and I during the tour to India for the World cup has took a break and visited various places in Hyderabad when we had a break of 5 days. 
-                                            We were overwhelmed with the care and love Hyderabadis show towards us. The architecture and the cultural history has amazed us and we are really glad we took break and visited all the places with their own significance like the Charminar, Golconda Fort, Qutb Shahi tombs etc.</div>
-                                      </div>
-                                  </div></div>  
-                    <div><div class="review review-right">
-                                      <div class="head-review">
-                                          <img src="Jim.jpeg" width="250px">
-                                      </div>
-                                      <div class="review-body">
-                                          <div class="name-review">Jim Carrey</div>
-                                          <div class="place-review">Toronto, Canada</div>
-                                          <div class="desc-review">
-                                            I have visited this place once, and I never forget its elegance and infrastructure. Charminar and the Golconda Fort are the ones that I love visiting the most. I've been around Mecca Masjid, and it's a peaceful place. If you're planning to visit this city, please make sure to visit these places to know its historical significance.
-                                          </div>
-                                      </div>
-                                  </div></div>
-                  </div>
-
-            
-        </div>
-        <div>
-            <h2>Feedback Form</h2>
-            <div class="feedback">
-                <form action="">
-                    <div class="row">
-                        <div class="leftcol">
-                            <label for="fname">First Name :</label>
-                        </div>
-                        <div class="rightcol">
-                            <input type="text" id="fname" name="firstname" placeholder="Your name..">
-                        </div>
+                    <div class="field">
+                        <label for="email">Email address</label>
+                        <input type="email" id="email" name="email" placeholder="Enter email address" required>
                     </div>
-                    <div class="row">
-                        <div class="leftcol">
-                            <label for="lname">Last Name :</label>
-                        </div>
-                        <div class="rightcol">
-                            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-                        </div>
+                    <div class="clearfix">
+                        <label for="phone">Enter Message</label>
+                        <div id="message_container"><textarea name="comment"  rows="10" placeholder="Type text here..."></textarea></div>
                     </div>
-                    <div class="row">
-                        <div class="leftcol">
-                            <label for="country">Country :</label>
-                        </div>
-                        <div class="rightcol">
-                            <select id="country" name="country">
-                            <option value="australia">Australia</option>
-                            <option value="canada">Canada</option>
-                            <option value="usa">USA</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="leftcol">
-                            <label for="subject">Feedback :</label>
-                        </div>
-                        <div class="rightcol">
-                            <textarea id="subject" name="subject" placeholder="Write your feedback.." style="height:200px"></textarea>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <input type="submit" value="Submit">
+                    <div class="buttons">
+                        <input type="submit" value="Send Message" class="btn">
                     </div>
                 </form>
             </div>
-        </div>
 
-    </div>
+        </section>
+        <section>
+            <div class="form_container">
+                <table>
 
-
-
+                    <tr>
+                        <td>Email</td>
+                        <td>hyderbadguide@example.com</td>
+                    </tr>
+                    <tr>
+                        <td>Phone</td>
+                        <td>+91 9247 377 994</td>
+                    </tr>
+                    <tr>
+                        <td>Address</td>
+                        <td>Tank Bund Rd, Hussain Sagar, Khairtabad, Hyderabad, Telangana 500022</td>
+                    </tr>
+                    <tr>
+                        <td>location</td>
+                        <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d971587.0457077121!2d78.33776052771209!3d17.966548307479535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb975f413161c5%3A0xdbd72c2ed04b874!2sTelangana%20Tourism%20Reservation%20%26%20Information%20Office!5e0!3m2!1sen!2sin!4v1606647064425!5m2!1sen!2sin" width="400" height="200" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></td>
+                    </tr>
+                    
+                </table>
+            </div>
+        </section>
+    </main>
 </body>
-
 </html>
